wss/2.1/modules/ROOT/pages/wss-module-upgrade-migrate.adoc
= Upgrading and Migrating WSS Module to Version 2.1

Upgrade WSS Module to version 2.x.

== Supported Upgrade Paths

[%header,cols="50a,50a"]
|===
|From Version | To Version
|2.0.x |2.1.x
|===

== Changes in This Release

WSS Module 2.1 includes these changes.

* WSS Module upgrades the default hashing algorithm from SHA-1 to SHA-256 to enhance cryptographic security and align with FIPS 140-3 approved standards.

== Upgrade Prerequisites

Before you perform the upgrade, you must create a backup of your files, data, and configurations in case you must restore them.

== Upgrade Steps

Follow these steps to perform the upgrade:

. In Anypoint Studio, right-click the project and select *Manage Dependencies* > *Manage Modules*.
. Select `Web Service Security Module` and click *Update version*.
. Click *Apply and Close*.
. Verify that the WSS Module dependency version is `2.1.0` in the `pom.xml` file in the Mule project.

Alternatively, you can manually update the WSS Module dependency version in the `pom.xml` file in the Mule project, or simply add the updated module to the project.

=== Verify the Upgrade

After you upgrade the connector, follow these steps to verify the upgrade:

. In Studio, verify that there are no errors in the *Problems* or *Console* views.
. Verify that there are no problems in the project `pom.xml` file.
. Test the connection to verify that the operations work.

== Troubleshoot

If there are problems with caching the parameters and caching the metadata, try restarting Anypoint Studio.

=== Revert the Upgrade

If it's necessary to revert to the previous version of WSS Module, change the WSS Module dependency version `2.1.0` in the project's `pom.xml` to the previous version.

You must update the project's `pom.xml` in Anypoint Studio.

== See Also

* xref:connectors::introduction/introduction-to-anypoint-connectors.adoc[Introduction to Anypoint Connectors]
* xref:wss-reference.adoc[WSS Module Reference]
* https://help.salesforce.com[Salesforce Help]
